cmake_minimum_required(VERSION 3.5)
project(qt_part_12)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_HOME_DIRECTORY}/bin)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Widgets)

add_executable(list_1 listing_1.cpp)
add_executable(list_2 listing_2.cpp)
add_executable(list_3 listing_3.cpp)
add_executable(list_4 listing_4.cpp)
add_executable(list_5 listing_5.cpp)
add_executable(list_6 listing_6.cpp)
add_executable(list_7 listing_7.cpp intlistmodel.cpp)
add_executable(list_8 listing_8.cpp)
add_executable(list_9 listing_9.cpp)
add_executable(list_10 listing_10.cpp)

target_link_libraries(list_1 PRIVATE Qt6::Widgets)
target_link_libraries(list_2 PRIVATE Qt6::Widgets)
target_link_libraries(list_3 PRIVATE Qt6::Widgets)
target_link_libraries(list_4 PRIVATE Qt6::Widgets)
target_link_libraries(list_5 PRIVATE Qt6::Widgets)
target_link_libraries(list_6 PRIVATE Qt6::Widgets)
target_link_libraries(list_7 PRIVATE Qt6::Widgets)
target_link_libraries(list_8 PRIVATE Qt6::Widgets)
target_link_libraries(list_9 PRIVATE Qt6::Widgets)
target_link_libraries(list_10 PRIVATE Qt6::Widgets)